[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprites/Rock.png" type="Texture" id=1]
[ext_resource path="res://Sprites/background.png" type="Texture" id=2]
[ext_resource path="res://Sprites/truck.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Item.gd" type="Script" id=4]
[ext_resource path="res://Scripts/ItemManager.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Truck.gd" type="Script" id=6]
[ext_resource path="res://Sprites/TruckOuterWall.png" type="Texture" id=7]
[ext_resource path="res://Sprites/NextLevelText.png" type="Texture" id=8]
[ext_resource path="res://Scripts/NextLevelText.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Items/Barrel.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 440, 280 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 440, 8 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4, 280 )

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5

[sub_resource type="StreamTexture" id=7]
load_path = "res://.import/crate.png-c387de9b883318ae36c9fd5a499c5602.stex"

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 222, 222 )

[sub_resource type="PhysicsMaterial" id=9]
friction = 0.5

[sub_resource type="StreamTexture" id=10]
load_path = "res://.import/crate.png-c387de9b883318ae36c9fd5a499c5602.stex"

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 42, 192 )

[node name="Level" type="Node2D"]

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1920, 1080 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 960, 540 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
z_index = -10
texture = ExtResource( 2 )

[node name="NextLevelText" type="Sprite" parent="."]
position = Vector2( 960, 360 )
z_index = -3
texture = ExtResource( 8 )
script = ExtResource( 9 )

[node name="Truck" type="Node2D" parent="."]
position = Vector2( 960, 360 )
script = ExtResource( 6 )

[node name="StorageArea" type="Area2D" parent="Truck"]
position = Vector2( 0, -44 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Truck/StorageArea"]
shape = SubResource( 5 )

[node name="StorageArea" type="Sprite" parent="Truck/StorageArea"]
z_index = -1
texture = ExtResource( 7 )

[node name="Truck" type="Sprite" parent="Truck"]
z_index = -2
texture = ExtResource( 3 )

[node name="Walls" type="StaticBody2D" parent="Truck"]
position = Vector2( 0, -44 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Truck/Walls"]
position = Vector2( 0, 284 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Truck/Walls"]
position = Vector2( 0, -284 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Truck/Walls"]
position = Vector2( -444, 0 )
shape = SubResource( 6 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Truck/Walls"]
position = Vector2( 444, 0 )
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="Truck/Walls"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Truck/Walls/Area2D"]
position = Vector2( 0, 284 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Truck/Walls/Area2D"]
position = Vector2( 0, -284 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Truck/Walls/Area2D"]
position = Vector2( -444, 0 )
shape = SubResource( 6 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Truck/Walls/Area2D"]
position = Vector2( 444, 0 )
shape = SubResource( 6 )

[node name="ItemManager" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Barrel" parent="ItemManager" instance=ExtResource( 10 )]
position = Vector2( 980, 500 )
isInTruck = true

[node name="Crate" type="RigidBody2D" parent="ItemManager"]
position = Vector2( 1680, 780 )
input_pickable = true
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 6
script = ExtResource( 4 )

[node name="NinePatchRect" type="NinePatchRect" parent="ItemManager/Crate"]
margin_left = -230.0
margin_top = -230.0
margin_right = 230.0
margin_bottom = 230.0
texture = SubResource( 7 )
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemManager/Crate"]
shape = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="ItemManager/Crate"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemManager/Crate/Area2D"]
shape = SubResource( 8 )

[node name="TextureButton" type="TextureButton" parent="ItemManager/Crate"]
margin_left = -230.0
margin_top = -230.0
margin_right = 230.0
margin_bottom = 230.0

[node name="Crate2" type="RigidBody2D" parent="ItemManager"]
position = Vector2( 400, 930 )
rotation = 1.0472
input_pickable = true
physics_material_override = SubResource( 9 )
gravity_scale = 0.0
contacts_reported = 6
script = ExtResource( 4 )

[node name="NinePatchRect" type="NinePatchRect" parent="ItemManager/Crate2"]
margin_left = -50.0
margin_top = -200.0
margin_right = 50.0
margin_bottom = 200.0
texture = SubResource( 10 )
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemManager/Crate2"]
shape = SubResource( 11 )

[node name="Area2D" type="Area2D" parent="ItemManager/Crate2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemManager/Crate2/Area2D"]
shape = SubResource( 11 )

[node name="TextureButton" type="TextureButton" parent="ItemManager/Crate2"]
margin_left = -50.0
margin_top = -200.0
margin_right = 50.0
margin_bottom = 200.0

[node name="Rock" type="Sprite" parent="."]
position = Vector2( 670, 982 )
texture = ExtResource( 1 )

[connection signal="area_entered" from="ItemManager/Crate/Area2D" to="ItemManager/Crate" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="ItemManager/Crate/Area2D" to="ItemManager/Crate" method="_on_Area2D_area_exited"]
[connection signal="button_down" from="ItemManager/Crate/TextureButton" to="ItemManager/Crate" method="_on_mouse_pressed"]
[connection signal="button_up" from="ItemManager/Crate/TextureButton" to="ItemManager/Crate" method="_on_mouse_released"]
[connection signal="mouse_entered" from="ItemManager/Crate/TextureButton" to="ItemManager/Crate" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ItemManager/Crate/TextureButton" to="ItemManager/Crate" method="_on_mouse_exited"]
[connection signal="area_entered" from="ItemManager/Crate2/Area2D" to="ItemManager/Crate2" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="ItemManager/Crate2/Area2D" to="ItemManager/Crate2" method="_on_Area2D_area_exited"]
[connection signal="button_down" from="ItemManager/Crate2/TextureButton" to="ItemManager/Crate2" method="_on_mouse_pressed"]
[connection signal="button_up" from="ItemManager/Crate2/TextureButton" to="ItemManager/Crate2" method="_on_mouse_released"]
[connection signal="mouse_entered" from="ItemManager/Crate2/TextureButton" to="ItemManager/Crate2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ItemManager/Crate2/TextureButton" to="ItemManager/Crate2" method="_on_mouse_exited"]
